--- a/Responsive Web Design/Personal Porfolio Webpage/index.html
+++ b/Responsive Web Design/Personal Porfolio Webpage/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     </head>
     <body>
         <nav id="navbar">
@@ -14,38 +15,46 @@
         </section>
         <section id="projects">
             <h2>These are some of my projects</h2>
-            <div id="projecs-grid">
-                <a class="project" href="https://codepen.io/pasok/pen/BazQavN">
-                    <img src="https://codepen.io/pasok/pen/BazQavN" alt="project">
-                    <p></p>
-                </a>
-                <a class="project" href="">
-                    <img src="" alt="project">
-                    <p>Tribute Page</p>
-                </a>
-                <a class="project" href="">
-                    <img src="" alt="project">
-                    <p></p>
-                </a>
-                <a class="project" href="">
-                    <img src="" alt="project">
-                    <p></p>
-                </a>
-                <a class="project" href="">
-                    <img src="" alt="project">
-                    <p></p>
-                </a>
-                <a class="project" href="">
-                    <img src="" alt="project">
-                    <p></p>
-                </a>
+            <div class="contaner" id="projecs-grid">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <a class="project" href="https://codepen.io/pasok/pen/BazQavN" target="_blank">
+                            <img no-repeat center center src="https://github.com/emyriounis/FreeCodeCamp/blob/main/Responsive%20Web%20Design/Personal%20Porfolio%20Webpage/images/Screenshot%20(1).png?raw=true" alt="project">
+                            <p>Tribute</p>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <a class="project" href="https://codepen.io/pasok/pen/rNLWrxL" target="_blank">
+                            <img src="https://github.com/emyriounis/FreeCodeCamp/blob/main/Responsive%20Web%20Design/Personal%20Porfolio%20Webpage/images/Screenshot%20(2).png?raw=true" alt="project">
+                            <p>Survey</p>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <a class="project" href="https://codepen.io/pasok/pen/RwRKGqP" target="_blank">
+                            <img src="https://github.com/emyriounis/FreeCodeCamp/blob/main/Responsive%20Web%20Design/Personal%20Porfolio%20Webpage/images/Screenshot%20(3).png?raw=true" alt="project">
+                            <p>Product</p>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <a class="project" href="https://codepen.io/pasok/pen/oNLBGJY" target="_blank">
+                            <img src="https://github.com/emyriounis/FreeCodeCamp/blob/main/Responsive%20Web%20Design/Personal%20Porfolio%20Webpage/images/Screenshot%20(4).png?raw=true" alt="project">
+                            <p>Documentation</p>
+                        </a>
+                    </div>
+                </div>
             </div>
+            <a id="show-more" href="https://github.com/emyriounis">Show More</a>
         </section>
         <section id="links">
-
+            <h2 id="fs">Let's work together...</h2>
+            <div id="fs2">How do you take your coffee?</div>
+            <div id="contact-links">
+                <a href="https://facebook.com/freecodecamp" target="_blank" class="contact-details">Facebook</a>
+                <a id="profile-link" href="https://github.com/emyriounis" target="_blank" class="contact-details">GitHub</a>
+                <a href="https://twitter.com/e_myriounis" target="_blank" class="contact-details">Twitter</a>
+                <a href="mailto:el.myrioun@gmail.com" class="contact-details">Send a mail</a>
+                <a href="tel:+30-698-945-9502" class="contact-details">Call me</a>
+              </div>
         </section>
-        <footer>
-
-        </footer>
     </body>
 </html>
